@@ -1692,8 +1692,9 @@ constFold (iCode * ic, set * cseSet)
   return 1;
 }
 
+#if 0
 /* Remove casts to bool from results of logical operations. */
-int
+static int
 boolCast (iCode * ic, set * cseSet)
 {
   iCode *dic = NULL;
@@ -1708,22 +1709,28 @@ boolCast (iCode * ic, set * cseSet)
 
   /* Check that this is a logic op. */
   if (dic->op != '!' &&
-    dic->op != '<' &&
-    dic->op != '>' &&
-    dic->op != EQ_OP &&
-    dic->op != AND_OP &&
-    dic->op != OR_OP &&
-    dic->op != GETHBIT &&
-    dic->op != GETABIT &&
-    !(dic->op == BITWISEAND && (IS_BOOL ( operandType (IC_LEFT (ic))) || IS_BOOL ( operandType (IC_RIGHT (ic)))))
-    )
-    return 0;
+      dic->op != '<' &&
+      dic->op != '>' &&
+//      dic->op != LE_OP && why not these 3 ???
+//      dic->op != GE_OP &&
+      dic->op != EQ_OP &&
+//      dic->op != NE_OP &&
+      dic->op != AND_OP &&
+      dic->op != OR_OP &&
+      dic->op != GETHBIT &&
+      dic->op != GETABIT &&
+      !(dic->op == BITWISEAND && (IS_BOOL ( operandType (IC_LEFT (ic))) || IS_BOOL ( operandType (IC_RIGHT (ic)))))
+     )
+    {
+      return 0;
+    }
 
   /* Replace cast by assignment. */
   ic->op = '=';
 
   return 0;
 }
+#endif
 
 /*-----------------------------------------------------------------*/
 /* deleteGetPointers - called when a pointer is passed as parm     */
@@ -2054,7 +2061,8 @@ cseBBlock (eBBlock * ebb, int computeOnly, ebbIndex * ebbi)
           /* do some algebraic optimizations if possible */
           algebraicOpts (ic, ebb);
           while (constFold (ic, cseSet));
-          while (boolCast (ic, cseSet));
+//          triggers bug 3223041
+//          while (boolCast (ic, cseSet));
         }
 
       /* small kludge */
