@@ -516,6 +516,9 @@ extern sym_link *validateLink (sym_link * l,
                                          x->select.s.noun == V_SBIT ))
 #define IS_BIT(x)        (IS_SPEC(x) && (x->select.s.noun  == V_BIT ||   \
                                          x->select.s.noun == V_SBIT ))
+#define IS_BOOLEAN(x)    (IS_SPEC(x) && (x->select.s.noun  == V_BIT ||   \
+                                         x->select.s.noun == V_SBIT ||   \
+                                         x->select.s.noun == V_BOOL ))
 #define IS_FLOAT(x)      (IS_SPEC(x) && x->select.s.noun == V_FLOAT)
 #define IS_FIXED16X16(x) (IS_SPEC(x) && x->select.s.noun == V_FIXED16X16)
 #define IS_FIXED(x)      (IS_FIXED16X16(x))
